--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
     "@ngneat/until-destroy": "^9.2.2",
     "@types/lodash-es": "^4.17.6",
     "lodash-es": "^4.17.21",
+    "ng-particles": "^3.7.0",
     "normalize.css": "^8.0.1",
     "rxjs": "^7.8.0",
     "tslib": "^2.4.1",
+    "tsparticles": "^2.7.0",
+    "tsparticles-engine": "^2.7.0",
+    "tsparticles-preset-confetti": "^2.7.0",
+    "tsparticles-preset-fireworks": "^2.7.0",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
