--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.0.4",
+    "@angular/cdk": "^15.0.3",
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "^15.0.4",
     "@types/jasmine": "~3.6.11",
-    "@types/node": "^12.20.55",
+    "@types/node": "^18.11.17",
+    "dotenv": "^16.0.3",
     "jasmine-core": "~3.7.1",
     "karma": "~6.3.20",
     "karma-chrome-launcher": "~3.1.1",
