--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 172.30.1.42",
+    "start": "ng serve",
+    "start-host": "ng serve --host 172.30.1.42",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
