--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "^15.0.4",
     "@types/jasmine": "~3.6.11",
-    "@types/node": "^18.11.17",
+    "@types/node": "~10.12.0",
     "dotenv": "^16.0.3",
     "jasmine-core": "~3.7.1",
     "karma": "~6.3.20",
@@ -47,6 +47,7 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "process": "^0.11.10",
     "typescript": "4.8.2"
   }
 }
