--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
     "process": "^0.11.10",
+    "stringz": "^2.1.0",
     "ts-node": "^10.9.1",
     "typescript": "4.8.2",
     "yargs": "^17.6.2"
