--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,7 +13,7 @@
   "rules": {
     "indent": ["error", "tab"],
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "single"],
     "semi": ["error", "always"]
   }
 }
