--- a/package.json
+++ b/package.json
@@ -41,17 +41,21 @@
     "@angular/cli": "^15.0.4",
     "@angular/compiler-cli": "^15.0.4",
     "@types/jasmine": "~3.6.11",
+    "@types/luxon": "^3.1.0",
     "@types/node": "~10.12.0",
     "@typescript-eslint/eslint-plugin": "^5.47.1",
     "@typescript-eslint/parser": "^5.47.1",
     "dotenv": "^16.0.3",
     "eslint": "^8.30.0",
+    "husky": "^8.0.2",
     "jasmine-core": "~3.7.1",
     "karma": "~6.3.20",
     "karma-chrome-launcher": "~3.1.1",
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.2",
     "karma-jasmine-html-reporter": "^1.7.0",
+    "lint-staged": "^13.1.0",
+    "luxon": "^3.2.0",
     "process": "^0.11.10",
     "stringz": "^2.1.0",
     "ts-node": "^10.9.1",
